<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium">
        <RadioGroup
            android:id="@+id/radioGroup_columns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radioButton_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />
            <RadioButton
                android:id="@+id/radioButton_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />
            <RadioButton
                android:id="@+id/radioButton_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category" />
            <RadioButton
                android:id="@+id/radioButton_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author" />
            <RadioButton
                android:id="@+id/radioButton_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"/>

        <RadioGroup
            android:id="@+id/radioGroup_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radioButton_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />
            <RadioButton
                android:id="@+id/radioButton_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descending" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>